test/invalid/fc36994_TestOverride/DefinesMethod.plume
/**
 * For testing override
 * @author 36994, César Santos
 */
class DefinesMethod extends Object is
  method test : () -> Boolean is
    true